[tool.poetry]
name = "compilers-project"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
mypy = "^1.13.0"

[tool.poetry.scripts]
main = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
prefer-active-python = true
